local changes pushed

--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Four Sight - Stunning, Affordable Websites for Your Business</title>
-    <meta name="description" content="Helping businesses come online with stunning, affordable websites. Fast delivery, modern design, and AI integration. Get your professional website today." />
-    <meta name="author" content="Four Sight" />
-    <meta name="keywords" content="website design, business websites, affordable web development, responsive design, professional websites" />
+    <title>FourSight - Stunning, Affordable Websites for Your Business</title>
+    <meta
+      name="description"
+      content="Helping businesses come online with stunning, affordable websites. Fast delivery, modern design, and AI integration. Get your professional website today."
+    />
+    <meta name="author" content="FourSight" />
+    <meta
+      name="keywords"
+      content="website design, business websites, affordable web development, responsive design, professional websites"
+    />
 
-    <meta property="og:title" content="Four Sight - Stunning, Affordable Websites for Your Business" />
-    <meta property="og:description" content="Helping businesses come online with stunning, affordable websites. Fast delivery, modern design, and AI integration." />
+    <meta
+      property="og:title"
+      content="FourSight - Stunning, Affordable Websites for Your Business"
+    />
+    <meta
+      property="og:description"
+      content="Helping businesses come online with stunning, affordable websites. Fast delivery, modern design, and AI integration."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/src/assets/hero-websites.jpg" />
 
