--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FourSight - Stunning, Affordable Websites for Your Business</title>
+    <link rel="icon" type="image/x-icon" href=".\public\favicon.ico" />
     <meta
       name="description"
       content="Helping businesses come online with stunning, affordable websites. Fast delivery, modern design, and AI integration. Get your professional website today."
